<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />


    <ImageView
        android:id="@+id/manImage"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:onClick="man"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintEnd_toStartOf="@+id/guideLineVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/selected_border"
        app:srcCompat="@drawable/male_icon" />

    <ImageView
        android:id="@+id/womanImage"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:onClick="woman"
        android:background="@drawable/selected_border"
        android:src="@drawable/female_icon"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideLineVertical"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/height"
        android:layout_margin="@dimen/margin_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guideLineHorizontal"
        android:hint="@string/growth"/>

    <EditText
        android:id="@+id/weight"
        android:layout_margin="@dimen/margin_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        app:layout_constraintTop_toBottomOf="@+id/height"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical"/>

    <EditText
        android:id="@+id/age"
        android:layout_margin="@dimen/margin_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        app:layout_constraintTop_toBottomOf="@id/weight"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical"/>

    <Button
        android:id="@+id/calculatebtm"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/margin_size"
        android:text="@string/calculate"
        android:onClick="calculatebtm"
        app:layout_constraintEnd_toStartOf="@id/guideLineVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <Button
        android:id="@+id/cancelbtm"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:text="@string/cancel"
        android:onClick="cancelbtm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideLineVertical"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <TextView
        android:id="@+id/yourBmr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/your_BMR"
        android:gravity="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelbtm" />

    <TextView
        android:id="@+id/bmr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text=""
        android:gravity="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourBmr" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/daily_cal"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmr" />

    <ImageView
        android:id="@+id/extraInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="extraInfo"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@android:drawable/ic_dialog_info"
        app:tint="#673AB7" />

    <TextView
        android:id="@+id/sitActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/sit_lifestyle"
        android:textSize="22sp"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/minActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/min_activity"
        android:textSize="22sp"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sitActivity" />

    <TextView
        android:id="@+id/avgActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/avg_activity"
        android:textSize="22sp"
        android:textColor="@color/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minActivity" />

    <TextView
        android:id="@+id/strActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/str_activity"
        android:textSize="22sp"
        android:textColor="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avgActivity" />

    <TextView
        android:id="@+id/maxActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/max_activity"
        android:textSize="22sp"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strActivity" />
</androidx.constraintlayout.widget.ConstraintLayout>
